hphp/test/slow/await_as_an_expression/error/binop6.php.expectf

Fatal error: Unary expression is not allowed in write context in %s/binop6.php on line 21
